<!--
  ~ Copyright © 2014-2026 The Android Password Store Authors. All Rights Reserved.
  ~ SPDX-License-Identifier: GPL-3.0-only
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="?android:attr/colorBackground"
  android:orientation="vertical">

  <!-- The same mark that opens the settings from every other screen, in the same corner. -->
  <androidx.appcompat.widget.AppCompatImageButton
    android:id="@+id/settings_button"
    android:layout_width="48dp"
    android:layout_height="48dp"
    android:layout_marginTop="@dimen/spacing_small"
    android:layout_marginEnd="@dimen/spacing_small"
    android:background="?attr/selectableItemBackgroundBorderless"
    android:contentDescription="@string/action_settings"
    android:scaleType="center"
    android:src="@drawable/ic_settings_24dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:tint="?attr/colorOnBackground" />

  <androidx.appcompat.widget.AppCompatImageView
    android:id="@+id/app_icon"
    android:layout_width="100dp"
    android:layout_height="100dp"
    android:contentDescription="@string/app_icon_hint"
    android:src="@mipmap/ic_launcher"
    android:transitionName="transition_first_app_icon"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <androidx.appcompat.widget.AppCompatTextView
    android:id="@+id/app_name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="16dp"
    android:text="@string/app_name"
    android:textAppearance="?attr/textAppearanceTitleLarge"
    android:textStyle="bold"
    android:transitionName="transition_first_run_app_name"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/app_icon" />

  <com.google.android.material.button.MaterialButton
    android:id="@+id/lets_go"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="48dp"
    android:layout_marginEnd="16dp"
    android:maxWidth="300dp"
    android:minWidth="100dp"
    android:text="@string/let_s_go"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/app_name" />
</androidx.constraintlayout.widget.ConstraintLayout>
